--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "multer": "^2.0.2",
-    "sax": "^1.4.4"
+    "sax": "^1.4.4",
+    "xml2js": "^0.6.2"
   }
 }
